Fix `conflict-marker` spacing when `align-issue-labels` is disabled

--- a/source/features/conflict-marker.css
+++ b/source/features/conflict-marker.css
@@ -2,3 +2,8 @@
 	vertical-align: middle;
 	color: var(--color-icon-tertiary, #ccc);
 }
+
+/* Add some padding after the issue title for when align-issue-labels is disabled #4117 */
+.js-issue-row .h4 {
+	padding-right: 4px;
+}
